// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetails renders 1`] = `
<React.Fragment>
  <table
    className="reportInstanceTable"
    onClick={[Function]}
  >
    <tbody>
      <React.Fragment>
        <css-selector
          deps={
            Object {
              "cardSelectionMessageCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "dispatcher": undefined,
              },
              "getPropertyConfigById": [Function],
            }
          }
          index={22}
          propertyData="body img"
        />
      </React.Fragment>
      <React.Fragment>
        <snippet
          deps={
            Object {
              "cardSelectionMessageCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "dispatcher": undefined,
              },
              "getPropertyConfigById": [Function],
            }
          }
          index={22}
          propertyData="this is a sample snippet"
        />
      </React.Fragment>
      <React.Fragment>
        <how-to-fix-web
          deps={
            Object {
              "cardSelectionMessageCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "dispatcher": undefined,
              },
              "getPropertyConfigById": [Function],
            }
          }
          index={22}
          propertyData={
            Object {
              "all": Array [],
              "any": Array [
                "Element does not have an alt attribute",
                "aria-label attribute does not exist or is empty",
                "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
              ],
              "none": Array [],
            }
          }
        />
      </React.Fragment>
    </tbody>
  </table>
  <InstanceDetailsFooter
    deps={
      Object {
        "cardSelectionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
        },
        "getPropertyConfigById": [Function],
      }
    }
    highlightState="unavailable"
    result={
      Object {
        "descriptors": Object {
          "snippet": "this is a sample snippet",
        },
        "identifiers": Object {
          "css-selector": "body img",
        },
        "resolution": Object {
          "how-to-fix-web": Object {
            "all": Array [],
            "any": Array [
              "Element does not have an alt attribute",
              "aria-label attribute does not exist or is empty",
              "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
            ],
            "none": Array [],
          },
          "howToFixSummary": "sample how to fix summary",
        },
        "ruleId": "image-alt",
        "status": "fail",
        "uid": "some-guid-here",
      }
    }
  />
</React.Fragment>
`;

exports[`InstanceDetails renders nothing when there is no card row config for the property / no property 1`] = `
<React.Fragment>
  <table
    className="reportInstanceTable"
  >
    <tbody>
      <React.Fragment />
      <React.Fragment />
      <React.Fragment />
    </tbody>
  </table>
  <InstanceDetailsFooter
    deps={
      Object {
        "getPropertyConfigById": [Function],
      }
    }
    highlightState="unavailable"
    result={
      Object {
        "descriptors": Object {},
        "identifiers": Object {
          "this-property-does-not-have-config": "some value",
        },
        "resolution": Object {},
        "ruleId": "image-alt",
        "status": "fail",
        "uid": "some-guid-here",
      }
    }
  />
</React.Fragment>
`;
